More modal CSS Rename file and add to preview. Add rule to ensure panel is hidden by default.

--- a/css/details-panel.css
+++ b/css/details-panel.css
@@ -1,6 +1,12 @@
+/* Details panel component */
 
+.details-panel {
+  display: none;
+}
 
+/* Panel behavior *when used as a modal* */
 .modal-open .details-panel {
+  display: block;
   position: fixed;
   top: 0;
   right: 0;
